@@ -1,4 +1,10 @@
+% $Id$
 % compile: latex  tex4ht-bibtex2
+%
+% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) 2000--2009 Eitan M. Gurari
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
 
 \documentclass{article}
   \input ProTex.sty
@@ -6,26 +12,14 @@
 
 \begin{document}
 
-\newcount\tmpcnt  \tmpcnt\time  \divide\tmpcnt  60
-\edef\temp{\the\tmpcnt}
-\multiply\tmpcnt  -60 \advance\tmpcnt  \time
-
-\edef\version{\the\year-\ifnum \month<10 0\fi
-  \the\month-\ifnum \day<10 0\fi\the\day
-   -\ifnum \temp<10 0\fi \temp
-   :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
-
-\def\CopyYear.#1.{%
-   \ifnum #1=\year #1\space\space\space\space\space\space
-    \else          #1--\the\year\fi
-}
-
-
-
-
+\input{common}
+\input{tex4ht-cpright}
 
 \<bibtex2.4ht\><<<
-
+% bibtex2.4ht (|version), generated from |jobname.tex
+% Copyright (C) 2009, 2010 TeX Users Group
+% Copyright (C) |CopyYear.2001. Eitan M. Gurari
+|<TeX4ht copywrite|>
 \catcode`\/=0
 \catcode`\\=12
 /edef/bibstyle{\bibstyle}
